--- a/ObservableCollectionEx/Tests/UnitTests/UnitTests.csproj
+++ b/ObservableCollectionEx/Tests/UnitTests/UnitTests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{952096AD-09F9-4053-B84D-712105D8B40C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTests</RootNamespace>
-    <AssemblyName>UnitTests</AssemblyName>
+    <RootNamespace>ObservableCollectionEx</RootNamespace>
+    <AssemblyName>ObservableCollectionExUnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -45,7 +45,10 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObservableCollectionExTest.cs" />
+    <Compile Include="ObservableCollectionExTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ObservableCollectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
