--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,2 +1,10 @@
-os: Visual Studio 2017
+version: 1.4.{build}
+image: Visual Studio 2017
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+build:
+  verbosity: minimal
 configuration: Release
