--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.4.{build}
-image: Visual Studio 2017
+image: Visual Studio 2017 Preview
 configuration: Release
 platform: Any CPU
 build:
