--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.4.{build}
-image: Visual Studio 2017 Preview
+image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
 before_build:
