--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,13 @@ version: 1.4.{build}
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
 before_build:
 - cmd: dotnet restore
 build:
+  parallel: true
   verbosity: minimal
