--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,3 +7,5 @@ before_build:
 build:
   parallel: true
   verbosity: minimal
+on_success:
+- cmd: rename ObservableCollectionEx\bin\Release\ObservableCollectionEx.0.0.0.nupkg ObservableCollectionEx\bin\Release\ObservableCollectionEx.%APPVEYOR_BUILD_VERSION%.nupkg
