--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,7 @@ before_build:
 build:
   parallel: true
   verbosity: minimal
-on_success:
-- cmd: echo "%APPVEYOR_BUILD_VERSION%"
+after_build:
+- cmd: >-
+    cd ObservableCollectionEx\bin\Release
+    ren ObservableCollectionEx.0.0.0.nupkg "ObservableCollectionEx.%APPVEYOR_BUILD_VERSION%.nupkg"
