--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,4 +9,4 @@ build:
   verbosity: minimal
 artifacts:
 - path: ObservableCollectionEx\bin\Release\ObservableCollectionEx.0.0.0.nupkg
-  name: ObservableCollectionEx.$(appveyor_build_version).nupkg
+  name: ObservableCollectionEx.$(APPVEYOR_BUILD_VERSION).nupkg
