--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,11 @@ version: 1.4.{build}
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: $(appveyor_build_version)
 before_build:
 - cmd: dotnet restore
 build:
