--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,5 +13,5 @@ build:
   parallel: true
   verbosity: minimal
 artifacts:
-- path: ObservableCollectionEx\bin\Release\ObservableCollectionEx.0.0.0.nupkg
-  name: ObservableCollectionEx.$(APPVEYOR_BUILD_VERSION).nupkg
+- path: **\*.nupkg
+  
