--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,5 +13,5 @@ build:
   parallel: true
   verbosity: minimal
 artifacts:
-  - path: '**\ObservableCollectionEx.*.nupkg'
+  - path: ObservableCollectionEx\bin\**\*.nupkg
     name: ObservableCollectionEx 
