--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
-version: 1.4.{build}
+# version: 1.4.{build}
 image: Visual Studio 2022
 configuration: Release
 platform: Any CPU
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
-  version: '{version}'
+  # version: '{version}'
   # package_version: $(appveyor_build_version)
 before_build:
 - cmd: dotnet restore
